Mantis ChangeLog

2004.10.xx  -  0.19.1

- 0004393: [feature] Version should be add with advanced options (bpfennig)
- 0004363: [bugtracker] "Add user to project" should have an additional button (bpfennig)
- 0004377: [bugtracker] $g_bug_submit_status should depends on user level (bpfennig)
- 0004407: [administration] History Column Titles do not match table text formating (bpfennig)
- 0004171: [bugtracker] Make all text area widths the same as for 'Add Note' (bpfennig)
- 0004538: [bugtracker] $g_bug_resolved_status_threshold doesn't work correctly with additional status (thraxisp)
- 0004440: [bugtracker] It should be possible to define an assigned to at "Change Status To" (thraxisp)
- 0004437: [bugtracker] Filenames of uploaded attached files are damaged (thraxisp)
- 0004576: [administration] Simplify display options for error handler (thraxisp)
- 0004394: [feature] Add link to remove all users from project (bpfennig)
- 0002091: [bugtracker] Bugnotes containing urls with the '@' sign in them get mangled (bpfennig)
- 0004326: [bugtracker] Links protected by brackets are not processed properly (bpfennig)
- 0003276: [feature] Add bugnote numbering and bugnote links. (bpfennig)
- 0004383: [localization] Editing a note has language specific note at end of note (bpfennig)
- 0004526: [other] Spaces needed after colons on main page (vboctor)
- 0004558: [custom fields] Custom Fields doesn't display links (bpfennig)
Updated Norwegian, Serbian, Chinese Simplified and Estonian translations

2004.09.12  -  0.19.0
